--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -3294,6 +3294,28 @@ footer {
             }
         }
     }
+
+    .modals-section{
+        position: fixed;
+        left: 0;
+        top: 0;
+        z-index: 1000;
+        width: 100%;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 0.65);
+        display: none;
+        align-items: center;
+        justify-content: center;
+        &._active{
+            display: flex;
+        }
+    }
+    .popup{
+        display: none;
+        &._active{
+            display: block;
+        }
+    }
 }
 
 @import "media";
