--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -64,7 +64,6 @@ button {
     display: flex;
     flex-direction: column;
     min-height: 100%;
-    padding-bottom: 102px;
 }
 
 .content {
@@ -333,6 +332,7 @@ footer {
 
 
 .constructor-wrapper{
+    padding-bottom: 102px;
     .button{
         display: block;
         max-width: max-content;
@@ -2136,6 +2136,20 @@ footer {
             position: absolute;
             display: flex;
             align-items: center;
+            &._active{
+                .constructor-item__dot{
+                    &-name{
+                        background-color: #1374CF;
+                        color: #FFF;
+                    }
+                    &-icon{
+                        border-color: #1374CF;
+                        span{
+                            background-color: #1374CF;
+                        }
+                    }
+                }
+            }
             &-name{
                 padding: 6px 16px;
                 background-color: rgba(255, 255, 255, 0.75);
@@ -3302,16 +3316,26 @@ footer {
         z-index: 1000;
         width: 100%;
         height: 100vh;
-        background-color: rgba(0, 0, 0, 0.65);
         display: none;
         align-items: center;
         justify-content: center;
+        &__back{
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.65);
+            z-index: 1;
+        }
         &._active{
             display: flex;
         }
     }
     .popup{
         display: none;
+        position: relative;
+        z-index: 2;
         &._active{
             display: block;
         }
